# qskeleton

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
doc/: manual.tex
examples/: cube3.ext  cube3.ine  example.ext  example.ine
src/UIUtils/: Arithmetic.cpp  Arithmetic.h  CMakeLists.txt  GenericIOStream.cpp  GenericIOStream.h  IOParams.cpp  IOParams.h  MatrixIO.hpp
src/converter/: CMakeLists.txt  main.cpp
src/ddm/: AdjacencyChecker.hpp  Algorithm.hpp  CMakeLists.txt  Parameters.hpp  Pivoting.hpp  Ray.hpp  Summary.hpp
src/ddmUI/: CMakeLists.txt  main.cpp
src/elimination/: CMakeLists.txt  Elimination.hpp  Inequality.hpp  Order.hpp  Parameters.hpp
src/eliminationUI/: CMakeLists.txt  main.cpp
src/utils/: GaussianElimination.hpp  Gcd.hpp  Matrix.hpp  MemoryManager.hpp  Set.hpp  Timer.hpp  Vector.hpp
